[tool.poetry]
name = "nbforager"
version = "0.2.3"
description = "Python package designed to assist in working with the Netbox REST API. The filter parameters are identical to those in the Web UI filter form. It replaces brief data with full information, and Netbox objects are represented as a recursive multidimensional dictionary."
authors = ["Vladimirs Prusakovs <vladimir.prusakovs@gmail.com>"]
readme = "README.rst"
license = "Apache-2.0"
homepage = "https://github.com/vladimirs-git/nbforager"
repository = "https://github.com/vladimirs-git/nbforager"
keywords = ["netbox"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Natural Language :: English",
]
[tool.poetry.dependencies]
python = "^3.8"
ciscoconfparse = "^1.9"
netports = "^0.12.1"
pydantic = "^2"
pynetbox = "^7.3.3"
requests = "^2"
tomli = "2.0.1"
vhelpers = "^0.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
poetry = "1.8.3"
pygments = "^2.16.1"
pylint = "^3.0.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
readthedocs-sphinx-search = "^0.3.1"
requests-mock = "^1.11.0"
restructuredtext-lint = "^1.4.0"
ruff = "^0.1.6"
sphinx = "7.1.2"
sphinx-rtd-theme = "^1.3.0"
sphinxnotes-strike = "^1.2"
twine = "^4.0.2"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.9"
types-tabulate = "^0.9.0.3"
typing-extensions = "^4.8.0"

[tool.setuptools.package-data]
nbforager = ["py.typed"]

[tool.poetry.extras]
test = ["pytest"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vladimirs-git/nbforager/issues"
"Download URL" = "https://github.com/vladimirs-git/nbforager/archive/refs/tags/0.2.3.tar.gz"

[tool.pylint]
max-line-length = 100
disable = "fixme"

#[tool.pylint.message_control]
#enable = ["too-many-public-methods"]
#max-public-methods = 50

[tool.pylint."tests.*"]
disable = [
    "assigning-non-slot",
    "duplicate-code",
    "no-member",
    "protected-access",
    "redefined-builtin",
    "redefined-outer-name",
    "too-many-statements",
    "unused-import",
    "use-dict-literal",
]

[tool.mypy]
python_version = "3.8"

[[tool.mypy.overrides]]
module = "pynetbox.*"
ignore_missing_imports = true

[tool.ruff]
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "_notes",
    "dist",
    "examples",
    "temp",
    "tmp",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py38"
#select = ["E4", "E7", "E9", "F"]
#ignore = []
#fixable = ["ALL"]
#unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false  # arguments on separate lines
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "pep257"  # docstring style

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
